lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:5: error: type mismatch;
 found   : Double
 required: Int
	setPousseeDesiree(P)
                          ^Lander:7: error: type mismatch;
 found   : Double
 required: Int
		setPousseeDesiree(P+1);
                                   ^Lander:9: error: type mismatch;
 found   : Double
 required: Int
		setPousseeDesiree(P-1);
                                   ^